# python-project-template

./: .editorconfig  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
{{ cookiecutter.project_name }}/: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: tests.yml
{{ cookiecutter.project_name }}/tests/: conftest.py  test_example.py
{{ cookiecutter.project_name }}/{{ cookiecutter.github_name }}/: __init__.py  example.py
