[tool.poetry]
name = "python-package-template"
version = "0.1.0"
description = ""
authors = ["Anton Paramoshin <antonparamoshin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.2"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.2"
black = "^20.8b1"
flakehell = "^0.6.0"
mypy = "^0.782"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
pep8-naming = "^0.11.1"
flake8-annotations = "^2.3.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.3"
isort = "^5.4.2"
pyupgrade = "^2.7.2"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_third_party = []

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
)/
'''

[tool.flakehell]
format = "grouped"
show_source = true
statistics = false
doctests = true
enable_extensions = "G"
accept_encodings = "utf-8"
max_complexity = 6
max_line_length = 120
docstring-convention = "google"
strictness = "short"

[tool.flakehell.plugins]
pyflakes = ["+*", "-F401", "-F403"]
# enable only codes from S100 to S199
flake8-bandit = ["-*", "+S1??"]
# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]
flake8-bugbear = ["+*", "-E501"]
mccabe = ["+*"]
"pep8-naming" = ["+*"]
pycodestyle = ["+*", "-E203", "-E266", "-W503"]
flake8-annotations = ["+*"]
flake8-docstrings = ["+*"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]
flake8-annotations = ["-*"]

[tool.flakehell.exceptions."noxfile.py"]
flake8-annotations = ["-*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
